--- a/src/plugins/fields/agosmmapwithmarker/language/de-DE/de-DE.plg_fields_agosmmapwithmarker.ini
+++ b/src/plugins/fields/agosmmapwithmarker/language/de-DE/de-DE.plg_fields_agosmmapwithmarker.ini
@@ -1,7 +1,7 @@
 PLG_FIELDS_AGOSMMAPWITHMARKER="Agosmmapwithmarker Field"
-PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESCRIPTION="Displays a Open Street Map with a Marker for an address."
-PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESC="Displays a Open Street Map with a Marker for an address."
+PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESCRIPTION="Zeigt eine OpenStreetMap-Karte mit einem Marker an einer Adresse an."
+PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESC="Zeigt eine OpenStreetMap-Karte mit einem Marker an einer Adresse an."
 PLG_FIELDS_AGOSMMAPWITHMARKER_LABEL="OpenStreetMap (%s)"
-PLG_FIELDS_AGOSMMAPWITHMARKER_PLACEHOLDER="Please enter the address where the marker should be displayed."
+PLG_FIELDS_AGOSMMAPWITHMARKER_PLACEHOLDER="Bitte geben Sie die Adresse ein, an der die Markierung angezeigt werden soll."
 PLG_FIELDS_AGOSMMAPWITHMARKER_MAP HEIGHT_LABEL="Höhe der Karte in Pixel"
 PLG_FIELDS_AGOSMMAPWITHMARKER_MAP HEIGHT_DESC="Die Anzeigehöhe der Karte in Pixel. Die Karte wird automatisch in voller Breite angezeigt. Also 100%. Sie können die Anzeigebreite mit CSS ändern."
