--- a/src/plugins/fields/agosmmapwithmarker/language/en-GB/en-GB.plg_fields_agosmmapwithmarker.sys.ini
+++ b/src/plugins/fields/agosmmapwithmarker/language/en-GB/en-GB.plg_fields_agosmmapwithmarker.sys.ini
@@ -1,3 +1,3 @@
 PLG_FIELDS_AGOSMMAPWITHMARKER="Agosmmapwithmarker Field"
-PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESCRIPTION="Displays a Open Street Map with a Marker for an address."
-PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESC="Displays a Open Street Map with a marker for an address."
+PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESCRIPTION="Displays an Open Street Map with a Marker for an address."
+PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESC="Displays an Open Street Map with a marker for an address."
