--- a/src/plugins/fields/agosmmapwithmarker/language/en-GB/en-GB.plg_fields_agosmmapwithmarker.ini
+++ b/src/plugins/fields/agosmmapwithmarker/language/en-GB/en-GB.plg_fields_agosmmapwithmarker.ini
@@ -1,6 +1,6 @@
 PLG_FIELDS_AGOSMMAPWITHMARKER="Agosmmapwithmarker Field"
-PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESCRIPTION="Displays a Open Street Map with a Marker for an address."
-PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESC="Displays a Open Street Map with a Marker for an address."
+PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESCRIPTION="Displays an Open Street Map with a Marker for an address."
+PLG_FIELDS_AGOSMMAPWITHMARKER_XML_DESC="Displays an Open Street Map with a Marker for an address."
 PLG_FIELDS_AGOSMMAPWITHMARKER_LABEL="OpenStreetMap (%s)"
 PLG_FIELDS_AGOSMMAPWITHMARKER_PLACEHOLDER="Please enter the address where the marker should be displayed."
 PLG_FIELDS_AGOSMMAPWITHMARKER_MAP HEIGHT_LABEL="The display height of the map"
